class Caja
{
private:
    /* data */
public:
    Caja(/* args */);
    ~Caja();
};

Caja::Caja(/* args */)
{
}

Caja::~Caja()
{
}