class Carro
{
private:
    /* data */
public:
    Carro(/* args */);
    ~Carro();
};

Carro::Carro(/* args */)
{
}

Carro::~Carro()
{
}