class Juego
{
private:
    /* data */
public:
    Juego(/* args */);
    ~Juego();
};

Juego::Juego(/* args */)
{
}

Juego::~Juego()
{
}