class Jugador
{
private:
    /* data */
public:
    Jugador(/* args */);
    ~Jugador();
};

Jugador::Jugador(/* args */)
{
}

Jugador::~Jugador()
{
}