class Velocidad
{
private:
    /* data */
public:
    Velocidad(/* args */);
    ~Velocidad();
};

Velocidad::Velocidad(/* args */)
{
}

Velocidad::~Velocidad()
{
}