class Vida
{
private:
    /* data */
public:
    Vida(/* args */);
    ~Vida();
};

Vida::Vida(/* args */)
{
}

Vida::~Vida()
{
}